# DPI-Engine-Pro

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
data/: config.ini  rules.txt  test_log.txt  test_model.txt  training_flows.csv
include/: anomaly_detector.h  benchmark.h  config_parser.h  connection_tracker.h  decision_tree.h  dpi_engine.h  fast_path.h  feature_importance.h  flow_features.h  live_capture.h  load_balancer.h  logger.h  ml_classifier.h  ml_metrics.h  model_evaluator.h  packet_parser.h  pcap_reader.h  protocol_parser.h  random_forest.h  rule_manager.h  signal_handler.h  sni_extractor.h  stats_dashboard.h  stream_reassembler.h  thread_safe_queue.h  training_data.h  types.h
src/: anomaly_detector.cpp  benchmark.cpp  config_parser.cpp  connection_tracker.cpp  decision_tree.cpp  dpi_engine.cpp  dpi_mt.cpp  fast_path.cpp  feature_importance.cpp  flow_features.cpp  live_capture.cpp  load_balancer.cpp  logger.cpp  main_pro.cpp  ml_classifier.cpp  ml_metrics.cpp  model_evaluator.cpp  packet_parser.cpp  pcap_reader.cpp  protocol_parser.cpp  random_forest.cpp  rule_manager.cpp  signal_handler.cpp  sni_extractor.cpp  stats_dashboard.cpp  stream_reassembler.cpp  training_data.cpp
tests/: test_classifier.cpp
